[kube-monitoring] Fixes ironic exporter naming

--- a/system/kube-monitoring/charts/ironic-exporter/templates/deployment.yaml
+++ b/system/kube-monitoring/charts/ironic-exporter/templates/deployment.yaml
@@ -2,24 +2,24 @@
 apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
-  name: ironic_exporter
+  name: ironic-exporter
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: ironic_exporter
+      app: ironic-exporter
       type: exporter
   template:
     metadata:
       labels:
-        app: ironic_exporter
+        app: ironic-exporter
         type: exporter
       annotations:
         prometheus.io/scrape: "true"
         prometheus.io/port: "{{ .Values.port_number }}"
     spec:
       containers:
-      - name: ironic_exporter
+      - name: ironic-exporter
         image: "{{ .Values.global.imageRegistry }}/{{ .Values.image.repository }}:{{ .Values.image.tag }}"
         env:
         - name: LOGLEVEL
