[kube-monitoring] ironic-exporter adds missing container port

--- a/system/kube-monitoring/charts/ironic-exporter/templates/deployment.yaml
+++ b/system/kube-monitoring/charts/ironic-exporter/templates/deployment.yaml
@@ -21,6 +21,10 @@ spec:
       containers:
       - name: ironic-exporter
         image: "{{ .Values.global.imageRegistry }}/{{ .Values.image.repository }}:{{ .Values.image.tag }}"
+        ports:
+        - containerPort: "{{ .Values.port_number }}"
+          name: metrics
+          protocol: TCP
         env:
         - name: LOGLEVEL
           value: "{{ .Values.log_level }}"
