[kube-monitoring] fixes port string err

--- a/system/kube-monitoring/charts/ironic-exporter/templates/deployment.yaml
+++ b/system/kube-monitoring/charts/ironic-exporter/templates/deployment.yaml
@@ -22,7 +22,7 @@ spec:
       - name: ironic-exporter
         image: "{{ .Values.global.imageRegistry }}/{{ .Values.image.repository }}:{{ .Values.image.tag }}"
         ports:
-        - containerPort: "{{ .Values.port_number }}"
+        - containerPort: {{ .Values.port_number }}
           name: metrics
           protocol: TCP
         env:
