revert previous osprofiler changes

--- a/openstack/blackbox/charts/blackbox-tests-canary/templates/deployment.yaml
+++ b/openstack/blackbox/charts/blackbox-tests-canary/templates/deployment.yaml
@@ -273,6 +273,13 @@ spec:
                 secretKeyRef:
                   name: blackbox-tests-canary
                   key: vc.password
+{{- if .Values.global.osprofiler.enabled }}
+            - name: OS_PROFILER_HMACS
+              valueFrom:
+                secretKeyRef:
+                  name: blackbox-tests-canary
+                  key: os.profiler.hmacs
+{{- end }}
             - name: SENTRY_DSN
               valueFrom:
                 secretKeyRef:
