Add cluster label to federation

--- a/system/kube-monitoring/charts/prometheus-frontend/templates/config.yaml
+++ b/system/kube-monitoring/charts/prometheus-frontend/templates/config.yaml
@@ -65,6 +65,7 @@ data:
       external_labels:
         region: {{ if .Values.regionPrefix }}{{ .Values.regionPrefix }}{{- end -}}{{ .Values.global.region }}
         cluster_type: {{ .Values.global.clusterType }}
+        cluster: {{ .Values.global.cluster }}
 
     rule_files:
       - ./*.rules
