--- a/system/kube-monitoring/charts/prometheus-collector/values.yaml
+++ b/system/kube-monitoring/charts/prometheus-collector/values.yaml
@@ -21,3 +21,8 @@ openstack_sd:
   domain_name:        DEFINED-IN-SECRETS
   project_name:       DEFINED-IN-SECRETS
   all_tenants:        DEFINED-IN-SECRETS
+
+resources:
+  requests:
+    cpu: "12"
+    memory: 40Gi
