--- a/system/kube-monitoring/charts/prometheus-frontend/templates/deployment.yaml
+++ b/system/kube-monitoring/charts/prometheus-frontend/templates/deployment.yaml
@@ -47,10 +47,7 @@ spec:
               mountPath: /prometheus
             - name: config
               mountPath: /etc/prometheus
-          resources:
-            requests:
-              cpu: 12
-              memory: 40Gi
+{{ toYaml .Values.resources | indent 10 }}
         - name: prometheus-configmap-reloader
           image: "{{ .Values.global.configmap_reload.image.repository }}:{{ .Values.global.configmap_reload.image.tag }}"
           args:
