--- a/system/kube-monitoring/charts/prometheus-frontend/values.yaml
+++ b/system/kube-monitoring/charts/prometheus-frontend/values.yaml
@@ -29,3 +29,8 @@ alerting:
   network: true
   # disable vmware alerts by setting `false` here
   vmware: true
+
+resources:
+  requests:
+    cpu: "12"
+    memory: 40Gi
