[swift] resource request and limits for deployments
* swift proxy deployment pod in QoS class guaranteed

--- a/openstack/swift/values.yaml
+++ b/openstack/swift/values.yaml
@@ -65,6 +65,9 @@ memcached_servers:
 sentry:
   enabled: false
 
+resources:
+  enabled: false
+
 # If the swift cluster is shared across multiple openstack clusters, one can
 # start multiple proxy deployments connecting to the different keystone backends
 clusters:
