--- a/openstack/swift/templates/object-expirer-deployment.yaml
+++ b/openstack/swift/templates/object-expirer-deployment.yaml
@@ -55,6 +55,16 @@ spec:
                   name: sentry
                   key: swift.DSN.public
             {{- end }}
+          {{- if .Values.resources.enabled }}
+          resources:
+            # observed usage: CPU = 1m-300m, RAM = 50-180 MiB
+            requests:
+              cpu: '200m'
+              memory: '200Mi'
+            limits:
+              cpu: '400m'
+              memory: '400Mi'
+          {{- end }}
           volumeMounts:
             - mountPath: /swift-etc
               name: swift-etc
