--- a/openstack/swift/templates/memcached-deployment.yaml
+++ b/openstack/swift/templates/memcached-deployment.yaml
@@ -3,7 +3,7 @@ kind: Deployment
 apiVersion: extensions/v1beta1
 
 metadata:
-  name: {{ $memcached }}
+  name: swift-{{ $memcached }}
   labels:
     release: "{{ $.Release.Name }}"
 spec:
@@ -16,11 +16,11 @@ spec:
       maxSurge: 3
   selector:
     matchLabels:
-      name: {{ $memcached }}
+      name: swift-{{ $memcached }}
   template:
     metadata:
       labels:
-        name: {{ $memcached }}
+        name: swift-{{ $memcached }}
     spec:
       containers:
         - name: memcached
