--- a/openstack/swift/templates/memcached-service.yaml
+++ b/openstack/swift/templates/memcached-service.yaml
@@ -3,7 +3,7 @@ kind: Service
 apiVersion: v1
 
 metadata:
-  name: {{ $memcached }}
+  name: swift-{{ $memcached }}
   labels:
     release: "{{ $.Release.Name }}"
   annotations:
@@ -12,7 +12,7 @@ metadata:
 
 spec:
   selector:
-    name: {{ $memcached }}
+    name: swift-{{ $memcached }}
   ports:
   - name: memcached
     port: 11211
