Added roles for arc service user for integration test

--- a/openstack/arc/templates/seed.yaml
+++ b/openstack/arc/templates/seed.yaml
@@ -202,6 +202,12 @@ spec:
         inherited: true
 
   - name: monsoon3
+    users:
+    - name: TM3_D063222_01
+      description: 'Automation Service for integration tests'
+      roles:
+      - project: 'Arc Test'
+        role: automation_admin
     groups:
     - name: MONSOON3_API_SUPPORT
       roles:
