Fix prometheus resource request

--- a/system/kube-monitoring/charts/prometheus-frontend/templates/deployment.yaml
+++ b/system/kube-monitoring/charts/prometheus-frontend/templates/deployment.yaml
@@ -47,7 +47,8 @@ spec:
               mountPath: /prometheus
             - name: config
               mountPath: /etc/prometheus
-{{ toYaml .Values.resources | indent 10 }}
+          resources:
+{{ toYaml .Values.resources | indent 12 }}
         - name: prometheus-configmap-reloader
           image: "{{ .Values.global.configmap_reload.image.repository }}:{{ .Values.global.configmap_reload.image.tag }}"
           args:
