--- a/system/kube-monitoring/charts/prometheus-collector/templates/deployment.yaml
+++ b/system/kube-monitoring/charts/prometheus-collector/templates/deployment.yaml
@@ -34,7 +34,8 @@ spec:
             {{- if semverCompare ">=v2.6.0" .Values.global.prometheus.tag }}
             - --web.page-title=Prometheus Collector {{ .Values.global.region | upper }}
             {{- end }}
-{{ toYaml .Values.resources | indent 10 }}
+          resources:
+{{ toYaml .Values.resources | indent 12 }}
           ports:
             - name: http
               containerPort: 9090
