[swift] set statsd-exporter TTL to 3h

--- a/openstack/swift/etc/statsd-exporter.yaml
+++ b/openstack/swift/etc/statsd-exporter.yaml
@@ -4,12 +4,12 @@
 # <https://github.com/prometheus/statsd_exporter#metric-mapping-and-configuration>
 
 # Activate once dashborads and alerts are adopted
-#defaults:
+defaults:
+  ttl: 3h
 #  timer_type: histogram
 #  buckets: [.025, .1, .25, 1, 2.5]
 #  match_type: glob
 #  glob_disable_ordering: false
-#  ttl: 0 # metrics do not expire
 
 mappings:
 
