[ironic] adds helm require statements

--- a/openstack/ironic/values.yaml
+++ b/openstack/ironic/values.yaml
@@ -4,10 +4,10 @@
 # name: value
 #
 global:
-  image_namespace: REQUIRED
-  imageRegistry: REQUIRED
+  #image_namespace: REQUIRED
+  #imageRegistry: REQUIRED
   ironicApiPortInternal: '6385'
-  ironic_tftp_ip: null
+  #ironic_tftp_ip: null
   ironictftpPortPublic: '69'
   ironic_pxe_port_public: '69'
   osprofiler: {}
@@ -40,16 +40,16 @@ pod:
            maxUnavailable: 0
            maxSurge: 1
 
-imageVersion: null
-imageVersionIronicApi: null
-imageVersionIronicConductor: null
-imageVersionIronicInspector: null
-imageVersionIronicPxe: null
+#imageVersion: null
+#imageVersionIronicApi: null
+#imageVersionIronicConductor: null
+#imageVersionIronicInspector: null
+#imageVersionIronicPxe: null
 swift_multi_tenant: True
 
 debug: "True"
 dbName: ironic
-dbPassword: null
+#dbPassword: null
 
 inspectordbName: ironic_inspector
 inspectordbUser: ironic_inspector
@@ -90,7 +90,7 @@ agent:
 
 console:
   ssh_loglevel: error
-  secret: null
+  #secret: null
 
 tftp_ip: null
 tftp_files:
@@ -98,13 +98,13 @@ tftp_files:
 
 portmetrics: '9102'
 
-network_management_uuid: DEFINE_IN_REGION_CHART
-network_cleaning_uuid: DEFINE_IN_REGION_CHART
+#network_management_uuid: DEFINE_IN_REGION_CHART
+#network_cleaning_uuid: DEFINE_IN_REGION_CHART
 neutron_url_timeout: 210
 neutron_port_setup_delay: 0
 
-swift_account: null
-swift_tempurl: null
+#swift_account: null
+#swift_tempurl: null
 
 pgmetrics:
   name: ironic
@@ -177,7 +177,7 @@ postgresql:
   backup:
     enabled: true
     metrics: true
-    osPassword: null
+    #osPassword: null
   resources:
     requests:
       cpu: "500m" # 1/2 cpu
@@ -189,15 +189,8 @@ sentry:
   enabled: true
 
 rabbitmq:
-  users:
-    default:
-      password: null
-    admin:
-      password: null
   persistence:
     enabled: false
-  metrics:
-    password: null
 
 logging:
   formatters:
