--- a/system/kube-monitoring/charts/prometheus-frontend/templates/config.yaml
+++ b/system/kube-monitoring/charts/prometheus-frontend/templates/config.yaml
@@ -167,6 +167,7 @@ data:
           - '{__name__=~"^swift_.+"}'
           - '{__name__=~"^unbound_.+"}'
           - '{__name__=~"^up"}'
+          - '{__name__=~"^uwsgi_.+"}'
           - '{__name__=~"^vasa_.+"}'
           - '{__name__=~"^vice_president_.+"}'
           - '{__name__=~"^vcenter_datastore_.+$"}'
