add values required for the consitency nanny fix mode

--- a/openstack/vcenter-utilities/templates/vcenter_datacenter_nanny_deployment.yaml
+++ b/openstack/vcenter-utilities/templates/vcenter_datacenter_nanny_deployment.yaml
@@ -76,6 +76,12 @@ template: |{{`
                 value: "`}}{{ .Values.vcenter_nanny.iterations }}{{`"
               - name: VCENTER_CLEANUP_INTERVAL
                 value: "`}}{{ .Values.vcenter_nanny.interval }}{{`"
+              - name: CINDER_POSTGRESQL_PW
+                value: "`}}{{ .Values.from_cinder.postgresql.postgresPassword }}{{`"
+              - name: NOVA_POSTGRESQL_PW
+                value: "`}}{{ .Values.from_nova.postgresql.postgresPassword }}{{`"
+              - name: REGION
+                value: "`}}{{ .Values.current_region }}{{`"
               - name: OS_AUTH_URL
                 value: "https://identity-3.{{ availability_zone[:-1] }}.cloud.sap:443/v3"
               - name: OS_PROJECT_NAME
