--- a/openstack/vcenter-utilities/values.yaml
+++ b/openstack/vcenter-utilities/values.yaml
@@ -24,6 +24,15 @@ vcenter_nanny:
   # really delete entities after how many iterations
   iterations: 14
 
+# these are used by the vcenter-nanny, but set during deployment via helm --set-string
+from_cinder:
+  postgresql:
+    postgresPassword: "will_be_set_by_helm_deployment"
+from_nova:
+  postgresql:
+    postgresPassword: "will_be_set_by_helm_deployment"
+current_region: "will_be_set_by_helm_deployment"
+
 vcenter_nanny_consistency:
   enabled: False
   # these two we use from the vcenter nanny entry above as we use the same docker image
