--- a/openstack/vcenter-utilities/templates/vcenter_datacenter_nanny_consistency_deployment.yaml
+++ b/openstack/vcenter-utilities/templates/vcenter_datacenter_nanny_consistency_deployment.yaml
@@ -62,6 +62,12 @@ template: |{{`
                 value: "`}}{{ .Values.vcenter_nanny_consistency.iterations }}{{`"
               - name: VCENTER_CONSISTENCY_INTERVAL
                 value: "`}}{{ .Values.vcenter_nanny_consistency.interval }}{{`"
+              - name: CINDER_POSTGRESQL_PW
+                value: "`}}{{ .Values.from_cinder.postgresql.postgresPassword }}{{`"
+              - name: NOVA_POSTGRESQL_PW
+                value: "`}}{{ .Values.from_nova.postgresql.postgresPassword }}{{`"
+              - name: REGION
+                value: "`}}{{ .Values.current_region }}{{`"
               - name: OS_AUTH_URL
                 value: "https://identity-3.{{ availability_zone[:-1] }}.cloud.sap:443/v3"
               - name: OS_PROJECT_NAME
