[kube-monitoring] fixes typo

--- a/system/kube-monitoring/charts/ironic-exporter/templates/deployment.yaml
+++ b/system/kube-monitoring/charts/ironic-exporter/templates/deployment.yaml
@@ -42,4 +42,4 @@ spec:
           value: "{{ .Values.os_project_name }}"
         - name: OS_PROJECT_DOMAIN_NAME
           value: "{{ .Values.os_project_domain_name }}"
-{{ end }}
+{{- end }}
