--- a/system/kube-monitoring/charts/ironic-exporter/templates/deployment.yaml
+++ b/system/kube-monitoring/charts/ironic-exporter/templates/deployment.yaml
@@ -1,4 +1,4 @@
-{{- if or .Values.enabled .Values.global.ironic-exporter.enabled }}
+{{ if or .Values.enabled .Values.global.ironic-exporter.enabled }}
 apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
@@ -42,4 +42,4 @@ spec:
           value: "{{ .Values.os_project_name }}"
         - name: OS_PROJECT_DOMAIN_NAME
           value: "{{ .Values.os_project_domain_name }}"
-{{- end }}
+{{ end }}
