[kube-monitoring] adds log-level to ironic-exporter

--- a/system/kube-monitoring/charts/ironic-exporter/values.yaml
+++ b/system/kube-monitoring/charts/ironic-exporter/values.yaml
@@ -3,6 +3,7 @@ image:
   tag: 817fc2a6
 port_number: 9191
 
+log_level: "INFO"
 os_user_domain_name: "Default"
 os_project_name: "master"
 os_project_domain_name: "ccadmin"
