fix elasticsearch 6 settings

--- a/openstack/elk/templates/es-client-deployment.yaml
+++ b/openstack/elk/templates/es-client-deployment.yaml
@@ -73,7 +73,7 @@ spec:
             - name: HTTP_ENABLE
               value: "true"
             - name: ES_JAVA_OPTS
-              value: "-Xms10g -Xmx10g"
+              value: "-XX:+UseG1GC -XX:MaxGCPauseMillis=300 -Xms10g -Xmx10g"
           volumeMounts:
             - mountPath: /es-bin
               name: es-bin
