--- a/openstack/elk/templates/es-data.yaml
+++ b/openstack/elk/templates/es-data.yaml
@@ -60,7 +60,7 @@ spec:
             - name: HTTP_ENABLE
               value: "true"
             - name: ES_JAVA_OPTS
-              value: "-Xms5g -Xmx10g"
+              value: "-XX:+UseConcMarkSweepGC -XX:CMSInitiatingOccupancyFraction=75 -XX:+UseCMSInitiatingOccupancyOnly -XX:MaxGCPauseMillis=5000 -Xms10g -Xmx10g"
           securityContext:
             capabilities:
               add:
