--- a/openstack/elk/templates/es-master-deployment.yaml
+++ b/openstack/elk/templates/es-master-deployment.yaml
@@ -77,7 +77,7 @@ spec:
           - name: HTTP_ENABLE
             value: "true"
           - name: ES_JAVA_OPTS
-            value: "-Xms1g -Xmx1g"
+            value: "-XX:+UseConcMarkSweepGC -XX:CMSInitiatingOccupancyFraction=75 -XX:+UseCMSInitiatingOccupancyOnly -XX:MaxGCPauseMillis=5000 -Xms1g -Xmx1g"
         volumeMounts:
           - mountPath: /es-bin
             name: es-bin
