--- a/openstack/elk/templates/logstash-deployment.yaml
+++ b/openstack/elk/templates/logstash-deployment.yaml
@@ -30,11 +30,11 @@ spec:
             name: logstash-etc
       containers:
         - name: logstash-netflow
-          image: docker.elastic.co/logstash/logstash:{{.Values.elk_image_version_logstash}}
+          image: {{.Values.docker_repo}}/elk-logstash:{{.Values.elk_image_version_logstash}}
           imagePullPolicy: IfNotPresent
           ports:
             - name: netflow
-              containerPort: {{.Values.elk_logstash_input_udp_port}}
+              containerPort: {{.Values.elk_logstash_input_netflow_port}}
               protocol: UDP
           command:
             - logstash
