[kube-monitoring] disables ironic-exporter for specific regions

--- a/system/kube-monitoring/charts/ironic-exporter/templates/deployment.yaml
+++ b/system/kube-monitoring/charts/ironic-exporter/templates/deployment.yaml
@@ -1,3 +1,4 @@
+{{- if (ne .Values.global.region "na-us-3") and (ne .Values.global.region "la-br-1") }}
 apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
@@ -41,3 +42,4 @@ spec:
           value: "{{ .Values.os_project_name }}"
         - name: OS_PROJECT_DOMAIN_NAME
           value: "{{ .Values.os_project_domain_name }}"
+{{- end}}
