--- a/system/kube-monitoring/charts/ironic-exporter/templates/deployment.yaml
+++ b/system/kube-monitoring/charts/ironic-exporter/templates/deployment.yaml
@@ -1,4 +1,4 @@
-{{- if (ne .Values.global.region "na-us-3") and (ne .Values.global.region "la-br-1") }}
+{{- if and (ne .Values.global.region "na-us-3") (ne .Values.global.region "la-br-1") }}
 apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
