change inhition rule from context to region and alertname
context isn't a good separator on that issue - it's often empty and hence matches too many alerts - so unrelated alerts are inhibited as a result

--- a/global/prometheus-alertmanager/templates/config.yaml
+++ b/global/prometheus-alertmanager/templates/config.yaml
@@ -12,18 +12,17 @@ data:
       - ./*.tmpl
 
     inhibit_rules:
-    # Mute warnings for which also a critical alert exists.
-    # Per context and region.
+    # More severe alerts mute less urgent ones.
     - source_match:
         severity: 'critical'
       target_match:
         severity: 'warning'
-      equal: ['context']
+      equal: ['region', 'alertname']
     - source_match:
         severity: 'critical|warning'
       target_match:
         severity: 'info'
-      equal: ['context']
+      equal: ['region', 'alertname']
 
     route:
       group_by: ['region', 'alertname']
