use the proper nova and cinder db password

--- a/openstack/vcenter-utilities/templates/vcenter_datacenter_nanny_consistency_deployment.yaml
+++ b/openstack/vcenter-utilities/templates/vcenter_datacenter_nanny_consistency_deployment.yaml
@@ -63,9 +63,9 @@ template: |{{`
               - name: VCENTER_CONSISTENCY_INTERVAL
                 value: "`}}{{ .Values.vcenter_nanny_consistency.interval }}{{`"
               - name: CINDER_POSTGRESQL_PW
-                value: "`}}{{ .Values.from_cinder.postgresql.postgresPassword }}{{`"
+                value: "`}}{{ .Values.from_cinder.global.dbPassword }}{{`"
               - name: NOVA_POSTGRESQL_PW
-                value: "`}}{{ .Values.from_nova.postgresql.postgresPassword }}{{`"
+                value: "`}}{{ .Values.from_nova.global.dbPassword }}{{`"
               - name: REGION
                 value: "`}}{{ .Values.current_region }}{{`"
               - name: OS_AUTH_URL
