--- a/openstack/vcenter-utilities/values.yaml
+++ b/openstack/vcenter-utilities/values.yaml
@@ -26,11 +26,11 @@ vcenter_nanny:
 
 # these are used by the vcenter-nanny, but set during deployment via helm --set-string
 from_cinder:
-  postgresql:
-    postgresPassword: "will_be_set_by_helm_deployment"
+  global:
+    dbPassword: "will_be_set_by_helm_deployment"
 from_nova:
-  postgresql:
-    postgresPassword: "will_be_set_by_helm_deployment"
+  global:
+    dbPassword: "will_be_set_by_helm_deployment"
 current_region: "will_be_set_by_helm_deployment"
 
 vcenter_nanny_consistency:
