add context for some some Kubernetes Alerts again (region && alertname stays)
severity inhibition uses now context again, because some Kubernetes Alerts (with different names) shall be inhibited - so key is 'region' && 'alertname' && 'context (in case context isn't set it will be ignored by alertmanager (says docu)) and the initial issue shall be covered, too

--- a/global/prometheus-alertmanager/templates/config.yaml
+++ b/global/prometheus-alertmanager/templates/config.yaml
@@ -17,12 +17,12 @@ data:
         severity: 'critical'
       target_match:
         severity: 'warning'
-      equal: ['region', 'alertname']
+      equal: ['region', 'alertname', 'context']
     - source_match:
         severity: 'critical|warning'
       target_match:
         severity: 'info'
-      equal: ['region', 'alertname']
+      equal: ['region', 'alertname', 'context']
 
     route:
       group_by: ['region', 'alertname']
