[neutron] nsx-t change default user

--- a/openstack/neutron/templates/vct-nsxv3-agent-configmap.yaml
+++ b/openstack/neutron/templates/vct-nsxv3-agent-configmap.yaml
@@ -33,7 +33,8 @@ template: |
       {{- end }}
 
       [NSXV3]
-      nsxv3_login_user = {= username | quote =}
+      # nsx-t has only admin / audit user
+      nsxv3_login_user = admin
       {%- set hostname = "nsx-ctl-" + name + "." + domain %}
       nsxv3_login_hostname = {= hostname =}
       nsxv3_login_password = {= username | derive_password(hostname) | quote =}
