[neutron] fix nsx-t certificate check and adapt transport zone

--- a/openstack/neutron/templates/vct-nsxv3-agent-deployment.yaml
+++ b/openstack/neutron/templates/vct-nsxv3-agent-deployment.yaml
@@ -56,6 +56,8 @@ template: |
             value: "ignore:Unverified HTTPS request"
           - name: PGAPPNAME
             value: neutron-nsxv3-agent-{= name =}
+          - name: REQUESTS_CA_BUNDLE
+            value: ""
           volumeMounts:
           - mountPath: /etc/neutron
             name: etcneutron
