[Barbican] editing helm-template

--- a/openstack/barbican/values.yaml
+++ b/openstack/barbican/values.yaml
@@ -6,7 +6,7 @@
 #
 global:
   imageNamespace: monsoon
-  imageRegistry: DEFINED-IN-REGION-CHART
+#  imageRegistry: DEFINED-IN-REGION-CHART
   master_password: ""
   dbUser: barbican
   pgbouncer:
