[Glance] editing helm-template

--- a/openstack/glance/values.yaml
+++ b/openstack/glance/values.yaml
@@ -3,16 +3,16 @@
 # Declare variables to be passed into your templates.
 global:
   imageNamespace: monsoon
-  imageRegistry: DEFINED-IN-REGION-CHART
+#  imageRegistry: DEFINED-IN-REGION-CHART
   dbUser: glance
   master_password: ""
   pgbouncer:
     enabled: true
 
 # The registry is deprecated, setting imageVersionGlanceRegistry or imageVersion will enable the deployment (but not the setting)
-imageVersionGlance: null
-imageVersionGlanceApi: null
-imageVersionGlanceRegistry: null
+# imageVersionGlance: null
+# imageVersionGlanceApi: null
+# imageVersionGlanceRegistry: null
 
 stores: "swift,file"
 default_store: swift
@@ -98,7 +98,7 @@ tempest:
 
 unittest:
   enabled: false
-  
+
 pgmetrics:
   name: glance
   customMetrics:
@@ -125,7 +125,7 @@ pgmetrics:
              description: "Image visibility"
          - gauge:
              usage: "GAUGE"
-             description: "Image Count"  
+             description: "Image Count"
 
 postgresql:
   imageTag: '9.4.14'
@@ -146,7 +146,7 @@ postgresql:
     requests:
       cpu: "500m" # 1/2 cpu
       memory: "300Mi" # 140Mi high recorded
-  
+
   shared_preload_libraries: pg_stat_statements
   track_activity_query_size: 2048
 
