--- a/openstack/glance/templates/migration-job.yaml
+++ b/openstack/glance/templates/migration-job.yaml
@@ -20,7 +20,7 @@ spec:
       restartPolicy: OnFailure
       containers:
       - name: glance-migration
-        image: {{.Values.global.imageRegistry}}/{{.Values.global.imageNamespace}}/ubuntu-source-glance-api:{{ .Values.imageVersionGlanceApi | default .Values.imageVersion | default .Values.image_version }}
+        image: {{required ".Values.global.imageRegistry is missing" .Values.global.imageRegistry}}/{{.Values.global.imageNamespace}}/ubuntu-source-glance-api:{{required ".Values.imageVersion is missing" .Values.imageVersion | default .Values.imageVersionGlanceApi | default .Values.image_version }}
         imagePullPolicy: IfNotPresent
         command:
         - kubernetes-entrypoint
