--- a/openstack/maia/values.yaml
+++ b/openstack/maia/values.yaml
@@ -1,6 +1,7 @@
 global:
   region: DEFINED-IN-REGION-SECRETS
   domain: DEFINED-IN-REGION-SECRETS
+  imageRegistry: DEFINED-IN-REGION-SECRETS
 
 maia:
   endpoint_host_public: DEFINED-IN-REGION-SECRETS
@@ -84,3 +85,11 @@ snmp_exporter:
 #  maia_snmp_config:
 #    - name: somename
 #      stilltocome: somevalues
+
+jumpserver:
+   image:
+      namespace: DEFINED-IN-REGION-SECRETS
+      name: jumphealth
+      tag: 1.1
+   radius_secret: DEFINED-IN-REGION-SECRETS
+   port_number: 9150
