expose jump metric

--- a/system/kube-monitoring/charts/prometheus-frontend/templates/config.yaml
+++ b/system/kube-monitoring/charts/prometheus-frontend/templates/config.yaml
@@ -119,6 +119,7 @@ data:
           - '{__name__=~"^inframonitor_.+"}'
           - '{__name__=~"^ingress_.+"}'
           - '{__name__=~"^ipmi_.+"}'
+          - '{__name__=~"^jump.+"}'
           - '{__name__=~"^keystone_.+"}'
           - '{__name__=~"^klog_.+"}'
           - '{__name__=~"^kube_.+"}'
