info alerts needs a regex matcher

--- a/global/prometheus-alertmanager/templates/config.yaml
+++ b/global/prometheus-alertmanager/templates/config.yaml
@@ -18,7 +18,7 @@ data:
       target_match:
         severity: 'warning'
       equal: ['region', 'alertname']
-    - source_match:
+    - source_match_re:
         severity: 'critical|warning'
       target_match:
         severity: 'info'
