[neutron] change nsx-t security group to alias

--- a/openstack/neutron/templates/vct-nsxv3-agent-configmap.yaml
+++ b/openstack/neutron/templates/vct-nsxv3-agent-configmap.yaml
@@ -25,7 +25,7 @@ template: |
       backdoor_socket = /var/lib/neutron/eventlet_backdoor.socket
 
       [securitygroup]
-      firewall_driver = networking_nsxv3.plugins.ml2.drivers.nsxv3.agent.extensions.firewall.NsxV3SecurityGroupsDriver
+      firewall_driver = nsxv3
 
       [AGENT]
       {{- range $k, $v := .Values.drivers.nsxv3.defaults.AGENT }}
