--- a/system/kube-monitoring/requirements.yaml
+++ b/system/kube-monitoring/requirements.yaml
@@ -5,3 +5,7 @@ dependencies:
   - name: kube-state-metrics
     repository: https://kubernetes-charts.storage.googleapis.com/
     version: 0.9.0
+  - name: ironic-exporter
+    repository: file://vendor/ironic-exporter
+    version: 1.0.0
+    condition: ironic-exporter.enabled
