--- a/openstack/glance/templates/deployment.yaml
+++ b/openstack/glance/templates/deployment.yaml
@@ -36,7 +36,7 @@ spec:
       - name: permissions
         securityContext:
           runAsUser: 0
-        image: {{required ".Values.global.imageRegistry is missing" .Values.global.imageRegistry}}/{{ .Values.global.imageNamespace}}/ubuntu-source-glance-api:{{required ".Values.global.imageVersion is missing" .Values.imageVersion | required "Please set glance.imageVersion or similar" }}
+        image: {{required ".Values.global.imageRegistry is missing" .Values.global.imageRegistry}}/{{ .Values.global.imageNamespace}}/ubuntu-source-glance-api:{{ .Values.imageVersionGlanceApi | default .Values.imageVersion | default .Values.image_version | required "Please set glance.imageVersion or similar" }}
         imagePullPolicy: IfNotPresent
         volumeMounts:
         - mountPath: /glance_store
@@ -50,7 +50,7 @@ spec:
           chown -R glance:glance /glance_store
       containers:
       - name: api
-        image: {{required ".Values.global.imageRegistry is missing" .Values.global.imageRegistry}}/{{.Values.global.imageNamespace}}/ubuntu-source-glance-api:{{required ".Values.global.imageVersionGlanceApi is missing" .Values.imageVersion | default .Values.imageVersion | default .Values.image_version | required "Please set glance.imageVersion or similar" }}
+        image: {{required ".Values.global.imageRegistry is missing" .Values.global.imageRegistry}}/{{.Values.global.imageNamespace}}/ubuntu-source-glance-api:{{.Values.imageVersionGlanceApi | default .Values.imageVersion | default .Values.image_version | required "Please set glance.imageVersion or similar"}}
         imagePullPolicy: IfNotPresent
         livenessProbe:
           httpGet:
@@ -145,7 +145,7 @@ spec:
 
       {{- if (or .Values.imageVersionGlanceRegistry .Values.imageVersion .Values.image_version) }}
       - name: registry
-        image: {{required ".Values.global.imageRegistry is missing" .Values.global.imageRegistry}}/{{.Values.global.imageNamespace}}/ubuntu-source-glance-registry:{{required ".Values.global.imageVersionGlanceRegistry is missing" .Values.imageVersion | default .Values.imageVersion | default .Values.image_version }}
+        image: {{required ".Values.global.imageRegistry is missing" .Values.global.imageRegistry}}/{{.Values.global.imageNamespace}}/ubuntu-source-glance-registry:{{ .Values.imageVersionGlanceApi | default .Values.imageVersion | default .Values.image_version | required "Please set glance.imageVersion or similar" }}
         imagePullPolicy: IfNotPresent
         command:
         - dumb-init
