--- a/openstack/infrastructure-exporters/vcenter-exporters/requirements.yaml
+++ b/openstack/infrastructure-exporters/vcenter-exporters/requirements.yaml
@@ -1,4 +1,4 @@
 dependencies:
 - name: utils
-  repository: file://../../openstack/utils
+  repository: file://../../../openstack/utils
   version: 0.1.1
