--- a/openstack/infrastructure-exporters/vcenter-exporters/Chart.yaml
+++ b/openstack/infrastructure-exporters/vcenter-exporters/Chart.yaml
@@ -1,4 +1,4 @@
 apiVersion: v1
-description: vcenter-utilities - utilities working on the different vcenters
-name: vcenter-utilities
+description: vcenter-exporters - Exporters for vCenter metrics
+name: vcenter-exporters
 version: 0.1.0
