--- a/openstack/manila/requirements.yaml
+++ b/openstack/manila/requirements.yaml
@@ -21,3 +21,6 @@ dependencies:
     condition: audit.enabled
     repository: file://../../common/rabbitmq
     version: 0.1.0
+  - name: region_check
+    repository: file://../../common/region_check
+    version: 0.1.0
