[Barbican][Glance] Adding common/region-check/ to requirements

--- a/openstack/barbican/requirements.yaml
+++ b/openstack/barbican/requirements.yaml
@@ -14,3 +14,6 @@ dependencies:
   - name: memcached
     repository: file://../../common/memcached
     version: 0.0.1
+  - name: region_check
+    repository: file://../../common/region_check
+    version: 0.1.0
