--- a/global/prometheus/values.yaml
+++ b/global/prometheus/values.yaml
@@ -21,6 +21,10 @@ kubernikus:
 
 retention: 90d
 
+alerting:
+  # disable all alerts by setting `false` here
+  enabled: true
+
 regions:
   - "staging"
   - "admin"
