configurable ingress host. fix region

--- a/global/prometheus/templates/ingress.yaml
+++ b/global/prometheus/templates/ingress.yaml
@@ -11,9 +11,9 @@ metadata:
 spec:
   tls:
      - secretName: prometheus-global
-       hosts: [prometheus.global.{{.Values.global.domain}}]
+       hosts: [{{ required ".Values.ingress.host undefined" .Values.ingress.host }}.{{ required ".Values.ingress.subdomain undefined" .Values.ingress.subdomain }}.{{ required ".Values.global.domain undefined" .Values.global.domain }}]
   rules:
-    - host: prometheus.global.{{.Values.global.domain}}
+    - host: {{ required ".Values.ingress.host undefined" .Values.ingress.host }}.{{ required ".Values.ingress.subdomain undefined" .Values.ingress.subdomain }}.{{ required ".Values.global.domain undefined" .Values.global.domain }}
       http:
         paths:
         - path: /
