--- a/global/prometheus/values.yaml
+++ b/global/prometheus/values.yaml
@@ -13,7 +13,7 @@ configmap_reload:
     tag: v0.2.2
 
 kubernikus:
-  # certificate and key for federation tls client authentication
+  # Certificate and key for federation tls client authentication.
   authentication:
     enabled: false
     tls_cert: DEFINED-IN-SECRETS
@@ -22,8 +22,13 @@ kubernikus:
 retention: 90d
 
 alerting:
-  # disable all alerts by setting `false` here
+  # Disable all alerts by setting `false` here.
   enabled: true
+
+ingress:
+  # The full ingress host name will be <.Values.ingress.host>.<.Values.ingress.subdomain>.<.Values.global.domain> .
+  # host:
+  # subdomain:
 
 regions:
   - "staging"
