--- a/global/prometheus/templates/deployment.yaml
+++ b/global/prometheus/templates/deployment.yaml
@@ -29,7 +29,7 @@ spec:
             - --storage.tsdb.retention={{.Values.retention}}
             - --web.console.libraries=/etc/prometheus/console_libraries
             - --web.console.templates=/etc/prometheus/consoles
-            - --web.external-url=https://prometheus.global.{{.Values.global.domain}}
+            - --web.external-url=https://{{ required ".Values.ingress.host undefined" .Values.ingress.host }}.{{ required ".Values.ingress.subdomain undefined" .Values.ingress.subdomain }}.{{ required ".Values.global.domain undefined" .Values.global.domain }}
             - --web.enable-admin-api
             - --web.enable-lifecycle
             - --log.level={{ default "info" .Values.log_level }}
