[manila][keystone] introduced cloud_sharedfilesystem_viewer
- read access manila in a whole region
- protected the role in keystone
- seeded for CCADMIN_API_SUPPORT and CCADMIN_STORAGE_SUPPORT
- implemented for resource overview 'scheduler_stats:pools'
- applied generally

--- a/openstack/manila/templates/seeds.yaml
+++ b/openstack/manila/templates/seeds.yaml
@@ -28,6 +28,7 @@ spec:
 
   roles:
   - cloud_sharedfilesystem_admin
+  - cloud_sharedfilesystem_viewer
   - sharedfilesystem_admin
   - sharedfilesystem_viewer
 
@@ -97,6 +98,8 @@ spec:
         role: cloud_sharedfilesystem_admin
     - name: CCADMIN_API_SUPPORT
       roles:
+      - project: cloud_admin
+        role: cloud_sharedfilesystem_viewer
       - project: api_support
         role: sharedfilesystem_admin
       - project: api_tools
@@ -124,6 +127,8 @@ spec:
         inherited: true
     - name: CCADMIN_STORAGE_SUPPORT
       roles:
+      - project: cloud_admin
+        role: cloud_sharedfilesystem_viewer
       - project: storage_support
         role: sharedfilesystem_admin
       - project: storage_tools
