pin cloudprober version to get fix https://github.com/google/cloudprober/issues/192

--- a/system/kube-monitoring/charts/cloudprober-exporter/templates/deployment.yaml
+++ b/system/kube-monitoring/charts/cloudprober-exporter/templates/deployment.yaml
@@ -30,7 +30,7 @@ spec:
             name: cloudprober-exporter
       containers:
         - name: prober
-          image: cloudprober/cloudprober
+          image: cloudprober/cloudprober@sha256:e018162dfbe43fa5f2ead9471cefe31d537652dc6f318a50477b66da0aad94b6
           imagePullPolicy: IfNotPresent
           args: [
             "--config_file","/cfg/cloudprober.cfg",
