--- a/system/kube-monitoring/charts/cloudprober-exporter/templates/deployment.yaml
+++ b/system/kube-monitoring/charts/cloudprober-exporter/templates/deployment.yaml
@@ -59,13 +59,14 @@ spec:
               port: 1080
             timeoutSeconds: 10
             periodSeconds: 60
+            failureThreshold: 5
             initialDelaySeconds: 60
           readinessProbe:
             httpGet:
               path: /
               port: 1080
             timeoutSeconds: 5
-            periodSeconds: 5
+            periodSeconds: 60
 
         - name: iperf3-server
           image: hub.global.cloud.sap/monsoon/iperf3
@@ -84,13 +85,13 @@ spec:
             exec:
               command: ["/bin/sh", "-c", "nc -v -n -z localhost 5201"]
             timeoutSeconds: 5
-            periodSeconds: 15
+            periodSeconds: 60
             initialDelaySeconds: 15
           readinessProbe:
             exec:
               command: ["/bin/sh", "-c", "nc -v -n -z localhost 5201"]
             timeoutSeconds: 5
-            periodSeconds: 15
+            periodSeconds: 60
             initialDelaySeconds: 15
 
 ---
