[blackbox][manila] add OS_MANILA_ENDPOINT_TYPE with default internal

--- a/openstack/blackbox/charts/blackbox-tests-canary/templates/deployment.yaml
+++ b/openstack/blackbox/charts/blackbox-tests-canary/templates/deployment.yaml
@@ -1,5 +1,5 @@
 kind: Deployment
-apiVersion: extensions/v1beta1 
+apiVersion: extensions/v1beta1
 
 metadata:
   name: blackbox-tests-canary
@@ -326,8 +326,8 @@ spec:
               value: {{ .Values.global.openstack.auth_url | quote }}
             - name: OS_IDENTITY_API_VERSION
               value: {{ .Values.global.openstack.identity_api_version | quote }}
-            - name: OS_VOLUME_API_VERSION
-              value: {{ .Values.global.openstack.volume_api_version | quote }}
+            - name: OS_MANILA_ENDPOINT_TYPE
+              value: {{ .Values.global.openstack.manila_endpoint_type | quote }}
             - name: OS_USERNAME
               value: {{ .Values.global.openstack.users.admin.username | quote }}
             - name: OS_USER_DOMAIN_NAME
