--- a/openstack/blackbox/values.yaml
+++ b/openstack/blackbox/values.yaml
@@ -11,6 +11,7 @@ global:
     region_name: DEFINED-IN-REGION-SECRETS
     identity_api_version: 3
     volume_api_version: 2
+    manila_endpoint_type: internal
     users:
       admin:
         username: DEFINED-IN-REGION-SECRETS
