--- a/system/kube-monitoring/charts/cloudprober-exporter/values.yaml
+++ b/system/kube-monitoring/charts/cloudprober-exporter/values.yaml
@@ -1,6 +1,6 @@
 # Default values for cloudprober-exporter.
 # This is a YAML-formatted file.
-# Declare variables to be passed into your templates.
-#servers:
-#  - DEFINED-IN-REGION-SECRETS
+index: >-
+  <h1>Hello</h1>
+  <p>This is a test</p>
 
