[Cinder][Nova] Adding common/region-check/ to requirements

--- a/openstack/nova/requirements.yaml
+++ b/openstack/nova/requirements.yaml
@@ -29,3 +29,6 @@ dependencies:
     condition: cell2.enabled
     repository: file://../../common/rabbitmq
     version: 0.1.0
+  - name: region_check
+    repository: file://../../common/region_check
+    version: 0.1.0
