--- a/openstack/cinder/requirements.yaml
+++ b/openstack/cinder/requirements.yaml
@@ -18,3 +18,6 @@ dependencies:
     alias: rabbitmq_notifications
     repository: file://../../common/rabbitmq
     version: 0.1.0
+  - name: region_check
+    repository: file://../../common/region_check
+    version: 0.1.0
