[Cinder] Removing common/region-check/ to requirements

--- a/openstack/cinder/values.yaml
+++ b/openstack/cinder/values.yaml
@@ -26,10 +26,10 @@ global:
 
 osprofiler: {}
 
-# imageVersion: null
-# imageVersionCinderApi: null
-# imageVersionCinderScheduler: null
-# imageVersionCinderVolume: null
+imageVersion: null
+imageVersionCinderApi: null
+imageVersionCinderScheduler: null
+imageVersionCinderVolume: null
 
 pod:
   replicas:
