[Nova] adding required value to the templates

--- a/openstack/nova/values.yaml
+++ b/openstack/nova/values.yaml
@@ -12,7 +12,7 @@ global:
   placementApiPortInternal: '8778'
   placementApiPortPublic: '443'
   master_password: null
-  
+
   dbUser: nova
 
   nova_service_user: nova
@@ -108,25 +108,25 @@ loci:
 
 #TODO we need to move to global or find another way to share image versions
 imageNameNeutron: loci-neutron
-imageVersionNeutronServer: null
-imageVersionNeutronOpenvswitchAgent: null
+# imageVersionNeutronServer: null
+# imageVersionNeutronOpenvswitchAgent: null
 
-imageNameOpenvswitch: loci-neutron
-imageVersionOpenvswitchVswitchd: null
-imageVersionOpenvswitchDbServer: null
+# imageNameOpenvswitch: loci-neutron
+# imageVersionOpenvswitchVswitchd: null
+# imageVersionOpenvswitchDbServer: null
 
 imageNameNova: loci-nova
-imageVersionNova: null
-imageVersionNovaApi: null
-imageVersionNovaCompute: null
-imageVersionNovaLibvirt: null
-imageVersionNovaConductor: null
-imageVersionNovaConsoleauth: null
-imageVersionNovaNovncproxy: null
-imageVersionNovaShellinaboxproxy: null
-imageVersionNovaSpicehtml5proxy: null
-imageVersionNovaScheduler: null
-imageVersionNovaPlacementApi: null
+# imageVersionNova: null
+# imageVersionNovaApi: null
+# imageVersionNovaCompute: null
+# imageVersionNovaLibvirt: null
+# imageVersionNovaConductor: null
+# imageVersionNovaConsoleauth: null
+# imageVersionNovaNovncproxy: null
+# imageVersionNovaShellinaboxproxy: null
+# imageVersionNovaSpicehtml5proxy: null
+# imageVersionNovaScheduler: null
+# imageVersionNovaPlacementApi: null
 
 vspc:
   enabled: false
@@ -470,7 +470,7 @@ postgresql:
     metrics: true
     os_password: null
 
-  resources: 
+  resources:
     requests:
       cpu: "1000m" # 1 cpu
       memory: "7Gi" # 6.3Gi high recorded
