--- a/openstack/nova/templates/nanny-deployment.yaml
+++ b/openstack/nova/templates/nanny-deployment.yaml
@@ -30,7 +30,7 @@ spec:
       containers:
 {{- if or .Values.db_purge.enabled .Values.consistency.enabled }}
         - name: db-consistency-and-purge
-          image: {{.Values.global.imageRegistry}}/{{.Values.global.image_namespace}}/nova-nanny:{{.Values.imageVersion_nova_nanny}}
+          image: {{required ".Values.global.imageRegistry is missing" .Values.global.imageRegistry}}/{{.Values.global.image_namespace}}/nova-nanny:{{.Values.imageVersion_nova_nanny}}
           imagePullPolicy: IfNotPresent
           command:
             - dumb-init
@@ -84,7 +84,7 @@ spec:
 {{- end }}
 {{- if .Values.quota_sync.enabled }}
         - name: quota-sync
-          image: {{.Values.global.imageRegistry}}/{{.Values.global.image_namespace}}/nova-nanny:{{.Values.imageVersion_nova_nanny}}
+          image: {{required ".Values.global.imageRegistry is missing" .Values.global.imageRegistry}}/{{.Values.global.image_namespace}}/nova-nanny:{{.Values.imageVersion_nova_nanny}}
           imagePullPolicy: IfNotPresent
           command:
             - dumb-init
@@ -110,7 +110,7 @@ spec:
 {{- end }}
 {{- if .Values.db_cleanup.enabled }}
         - name: db-cleanup
-          image: {{.Values.global.imageRegistry}}/{{.Values.global.image_namespace}}/nova-nanny:{{.Values.imageVersion_nova_nanny}}
+          image: {{required ".Values.global.imageRegistry is missing" .Values.global.imageRegistry}}/{{.Values.global.image_namespace}}/nova-nanny:{{.Values.imageVersion_nova_nanny}}
           #imagePullPolicy: IfNotPresent
           imagePullPolicy: Always
           command:
@@ -148,7 +148,7 @@ spec:
 {{- end }}
 {{- if .Values.sync_neutron_cache.enabled }}
         - name: sync-neutron-cache
-          image: {{.Values.global.imageRegistry}}/{{.Values.global.image_namespace}}/nova-nanny:{{.Values.imageVersion_nova_nanny}}
+          image: {{required ".Values.global.imageRegistry is missing" .Values.global.imageRegistry}}/{{.Values.global.image_namespace}}/nova-nanny:{{.Values.imageVersion_nova_nanny}}
           imagePullPolicy: IfNotPresent
           command:
             - dumb-init
