[arc] fixed broken seed. domain monsoon3 had been wiped out.

--- a/openstack/arc/templates/seed.yaml
+++ b/openstack/arc/templates/seed.yaml
@@ -200,6 +200,8 @@ spec:
       - domain: hec
         role: automation_viewer
         inherited: true
+
+  - name: monsoon3
     groups:
     - name: MONSOON3_API_SUPPORT
       roles:
