replace simple netcat web server by nginx

--- a/system/kube-monitoring/charts/cloudprober-exporter/templates/config.yaml
+++ b/system/kube-monitoring/charts/cloudprober-exporter/templates/config.yaml
@@ -10,6 +10,7 @@ metadata:
     release: "{{$.Release.Name}}"
 
 data:
+  index.html: {{ .Values.index }}
   cloudprober.cfg: |
     {{- range $i, $config := .Values.static_ping_targets }}
     probe {
@@ -51,7 +52,5 @@ data:
       }
     }
     {{- end }}
-
-  index.html: {{ .Values.index | quote }}
 
   {{ end -}}
