[swift] fix memcached service name

--- a/openstack/swift/templates/memcached-service.yaml
+++ b/openstack/swift/templates/memcached-service.yaml
@@ -3,7 +3,7 @@ kind: Service
 apiVersion: v1
 
 metadata:
-  name: swift-{{ $memcached }}
+  name: {{ $memcached }}
   labels:
     release: "{{ $.Release.Name }}"
   annotations:
